	PR middle-end/37338 	* gimplify.c (gimplify_body): Call default_rtl_profile.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@140249 138bc75d-0d04-0410-961f-82ee72b054a4